# ghidrecomp

./: .gitignore  Dockerfile  README.md  decompile-all-the-things.py  ghidrecomp.py  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.devcontainer/library-scripts/: ghidra-install.sh
.github/workflows/: build-and-push-devcontainer.yml  devcontainer.json  docker-build-publish.yaml  lint-python-package.yml  pytest-devcontainer-all.yml  pytest-devcontainer-pypi.yml  pytest-devcontainer.yml  python-package.yml  python-publish.yml
ghidrecomp/: __init__.py  __main__.py  bsim.py  callgraph.py  decompile.py  parser.py  utility.py
tests/: test_bsim.py  test_callgraph.py  test_gdt.py  test_ghidrecomp.py  test_gzf.py
tests/data/: afd.sys.10.0.22621.1415  ls_aarch64  ntddk_64.gdt
