[metadata]
name = ghidrecomp
author = clearbluejar
author_email = clearbluejar@clearbluejar.com
version = attr:ghidrecomp.__version__
description = Python Command-Line Ghidra Decomplier
long_description_content_type = text/markdown
long_description = file:README.md
license = GPL-3.0 license
license_files =
    LICENSE    
url = https://github.com/clearbluejar/ghidrecomp
keywords = ghidra, decompiler, callgraph, bsim
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
python_requires = >= 3.9
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    pyghidra>=1.0.0

[options.entry_points]
console_scripts =
    ghidrecomp = ghidrecomp.__main__:main

[options.extras_require]
testing =
    pytest
    pytest-datadir

[tool:pytest]
testpaths = tests
required_plugins =
    pytest-datadir
addopts =
    -p no:faulthandler

[pycodestyle]
max_line_length = 130
